<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button!</string>
    <string name="login">Login</string>
    <string name="login_hint">Login Name</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="LoginFlagDesc">A Flag</string>
    <string name="ListActivitySwitch">What does this do?</string>
    <string name="dialog_title">Are you sure?</string>
    <string name="dialog_message">Do you want to exit?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="check">Checkbox</string>
    <string name="radio">RadioButton</string>
    <string name="startChat">Start chat</string>
    <string name="send">Send</string>
    <string name="chat_hint">Type to Chat</string>
    <string name="newText">new text</string>
    <string name="contentDescript">pic</string>
    <string name="weatherForecast">Weather Forecast</string>
</resources>
